--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
 
+  sqflite: ^1.3.2+1
+  path_provider: ^1.6.24
+  provider: ^4.3.2+3
 dev_dependencies:
+  test: any
   flutter_test:
     sdk: flutter
+
+
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,8 +53,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
